# fi

./: CMakeLists.txt  README.md  conanfile.py  readme.md
include/fi/: all.hpp  color_channel.hpp  format.hpp  format_info.hpp  free_image.hpp  freeimage.hpp  image.hpp  jpeg.hpp  memory.hpp  metadata.hpp  multi_image.hpp  quantization_mode.hpp  tag.hpp
include/fi/enums/: color_channel.hpp  color_mask.hpp  color_type.hpp  dithering_mode.hpp  filter.hpp  metadata_model.hpp  metadata_type.hpp  quantization_mode.hpp  type.hpp
include/fi/utility/: bitset_enum.hpp  rectangle.hpp  span.hpp
tests/: image_test.cpp  memory_test.cpp  multi_image_test.cpp
